Null deref under callAfterNextPresentationUpdate https://bugs.webkit.org/show_bug.cgi?id=169710 <rdar://problem/30987863>

Reviewed by Simon Fraser.

Source/WebKit2:

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::callAfterNextPresentationUpdate):
Call the callback with an error if we don't have a web process or drawing area.

Tools:

* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* TestWebKitAPI/Tests/WebKit2Cocoa/DoAfterNextPresentationUpdateAfterCrash.mm: Added.
(TEST):


Canonical link: https://commits.webkit.org/186691@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@214019 268f45cc-cd09-0410-ab3c-d52691b4dbfc